# ramp-engine

./: CMakeLists.txt  README.md
headers/: friction.h
src/: main.cpp
